--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
 		"min_engine_version": [
 			1,
 			21,
-			0
+			30
 		],
 		"uuid": "16670ca6-8706-499f-804d-b5891994aa2e",
 		"version": [
@@ -53,15 +53,11 @@
 	"dependencies": [
 		{
 			"module_name": "@minecraft/server",
-			"version": "1.14.0-beta"
-		},
-		{
-			"module_name": "@minecraft/server-gametest",
-			"version": "1.0.0-beta"
+			"version": "1.14.0"
 		},
 		{
 			"module_name": "@minecraft/server-ui",
-			"version": "1.3.0-beta"
+			"version": "1.3.0"
 		}
 	]
 }
